# To-Do-Service

./: .dockerignore  .env.example  .gitignore  Dockerfile  FASTMCP_USAGE.md  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/routes/: tasks.py
app/db/: session.py
app/mcp_client/: __init__.py  __main__.py  cli.py  fastmcp_client.py
app/mcp_server/: __init__.py  __main__.py  fastmcp_server.py  server.py
app/models/: __init__.py  task.py
app/schemas/: __init__.py  task.py
app/services/: __init__.py  task_service.py
